# webserv-basic-async

./: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  Makefile  box_ptr.cpp  box_ptr.hpp  config.json  main.cpp  multiserver.json  mutex.cpp  mutex.hpp  mutex.ipp  rc_ptr.cpp  rc_ptr.hpp  setup-docker.sh  test.txt
args/: Args.cpp  Args.hpp
boxed/: BoxPtr.hpp  BoxPtr.ipp  RcPtr.hpp  boxed.hpp
cgi/: Cgi.cpp  Cgi.hpp
config/: Config.cpp  Config.hpp
constants/: config.hpp  constants.hpp  mimetypes.hpp
docs/: Workstealing.drawio
fs/: File.cpp  File.hpp  Path.cpp  Path.hpp
func/: Functor.cpp  Functor.hpp  SetReadyFunctor.cpp  SetReadyFunctor.hpp  SetValueFunctor.hpp  SetValueFunctor.ipp
futures/: FdLineStream.cpp  FdLineStream.hpp  ForEachFuture.cpp  ForEachFuture.hpp  IFuture.hpp  IStream.hpp  IStreamExt.hpp  IStreamExt.ipp  PollResult.cpp  PollResult.hpp  PollResult.ipp  SelectFuture.hpp  SelectFuture.ipp  StdinLineStream.cpp  StdinLineStream.hpp  StreamPollResult.hpp  StreamPollResult.ipp  Task.cpp  Task.hpp  Waker.cpp  Waker.hpp  futures.hpp
http/: Body.cpp  Body.hpp  DefaultPageBody.cpp  DefaultPageBody.hpp  DefaultPageReader.cpp  DefaultPageReader.hpp  DirectoryBody.cpp  DirectoryBody.hpp  DirectoryReader.cpp  DirectoryReader.hpp  FutureSeReader.cpp  FutureSeReader.hpp  Header.cpp  Header.hpp  HttpHeader.cpp  HttpHeader.hpp  HttpMethod.cpp  HttpMethod.hpp  HttpParser.cpp  HttpParser.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpRequestParser.cpp  HttpRequestParser.hpp  HttpResponse.cpp  HttpResponse.hpp  HttpRfcConstants.hpp  HttpServer.cpp  HttpServer.hpp  HttpServer.ipp  HttpStatus.cpp  HttpStatus.hpp  HttpVersion.cpp  HttpVersion.hpp  IncomingBody.cpp  IncomingBody.hpp  IncomingMessage.cpp  IncomingMessage.hpp  IncomingRequest.cpp  IncomingRequest.hpp  (+60 more)
ioruntime/: CharacterStream.cpp  CharacterStream.hpp  EventHandler.hpp  FdLineStream.hpp  FdStringReadFuture.cpp  FdStringReadFuture.hpp  FileDescriptor.cpp  FileDescriptor.hpp  GlobalChildProcessHandler.cpp  GlobalChildProcessHandler.hpp  GlobalIoEventHandler.cpp  GlobalIoEventHandler.hpp  GlobalRuntime.cpp  GlobalRuntime.hpp  GlobalRuntime.ipp  GlobalTimeoutEventHandler.cpp  GlobalTimeoutEventHandler.hpp  IAsyncRead.cpp  IAsyncRead.hpp  IAsyncWrite.cpp  IAsyncWrite.hpp  IEventHandler.cpp  IEventHandler.hpp  IExecutor.cpp  (+29 more)
(+186 files in other folders)
